--- a/module2_sol/index.html
+++ b/module2_sol/index.html
@@ -1,14 +1,33 @@
+<!-- 
+File: index.html
+Description: HTML layout for Module 2 solution.
+Author: Andrew Namgoong
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset = "utf-8">
 	<title>Tips on Hiking</title>
-	<link rel = "stylesheet" href = "module2_sol.css">
+	<link rel = "stylesheet" href = "css/module2_sol.css">
+	<meta name = "viewport" content = "width=device_width, initial-scale = 1">
 </head>
 <body>
+
 <h2>Tips on Hiking</h2>
-	<p>I like sushi..</p>
-	<p>I like pie...</p>
-	<p>I like food...</p>	
+<div class = "container col-lg-4 col-md-6">
+	<h3>Prepare</h3>
+	<p>Always make sure that you have everything that you need. Because during a camping trip, if you get lost, you may need to use the essentials in your backpack to survive. In order to survive, you need to understand the acronym STOP. This is a basic protocal that most professional hikers know about, and usually works in situations not as drastic as a person falling into a lake from a waterfall D:</p>
+</div>
+
+<div class = "container col-lg-4 col-md-6">
+	<h3>Pack</h3>
+	<p>How and what you pack is very essential! </p>
+</div>
+
+<div class = "container col-lg-4 col-md-12">
+	<h3>Have Fun!</h3>
+	<p>And never forget to have fun people!</p>
+</div>
 </body>
-</html>
+</html> 
