--- a/module2_sol/index.html
+++ b/module2_sol/index.html
@@ -17,23 +17,24 @@ Author: Andrew Namgoong
 <h2>Tips on Hiking</h2>
 <div class = "col-lg-4 col-md-6">
 	<div class = "container">
-	<h3>Prepare</h3>
-	<p>Always make sure that you have everything that you need. Because during a camping trip, if you get lost, you may need to use the essentials in your backpack to survive. In order to survive, you need to understand the acronym STOP, which stands for Stop, Think, Observe, and Plan. This is a basic protocal that most professional hikers know about, and usually works in situations not as drastic as a person falling into a lake from a waterfall D:</p>
+		<h3>Prepare</h3>
+		<p>Always make sure that you have everything that you need. Because during a camping trip, if you get lost, you may need to use the essentials in your backpack to survive. In order to survive, you need to understand the acronym STOP, which stands for Stop, Think, Observe, and Plan. This is a basic protocal that most professional hikers know about, and usually works in situations not as drastic as a person falling into a lake from a waterfall D:</p>
 	</div>
 </div>
 
 <div class = "col-lg-4 col-md-6">
 	<div class = "container">
-	<h3>Pack</h3>
-	<p>How and what you pack is very essential! Especially on long treks where you have to survive in the wilderness for several days, how you pack will determine how easygoing the hike/backpacking trip will be! For example, for day-time hikes, packing some snacks, water, and essentials just in case of becoming lost are must-haves. For long-term backpacking trips, you would want to pack lightweight and compact so that your body does not suffer too much stress transporting items with you </p>
+		<h3>Pack</h3>
+		<p>How and what you pack is very essential! Especially on long treks where you have to survive in the wilderness for several days, how you pack will determine how easygoing the hike/backpacking trip will be! For example, for day-time hikes, packing some snacks, water, and essentials just in case of becoming lost are must-haves. For long-term backpacking trips, you would want to pack lightweight and compact so that your body does not suffer too much stress transporting items with you.</p>
 	</div>
 </div>
 
 <div class = "col-lg-4 col-md-12">
 	<div class = "container">
-	<h3>Have Fun!</h3>
-	<p>And never forget to have fun people! Being a peaceful observer of nature will expose you to the many natural wonders that you will never experience living in the city. Hiking/backpacking is always the time to just relax, calm down, sight-see, and enjoy yourself while at the same time respecting the environment.</p>
+		<h3>Have Fun!</h3>
+		<p>And never forget to have fun people! Being a peaceful observer of nature will expose you to the many natural wonders that you will never experience living in the city. Hiking/backpacking is always the time to just relax, calm down, sight-see, and enjoy yourself while at the same time respecting the environment.</p>
 	</div>
 </div>
+
 </body>
 </html> 
