--- a/module3_sol/index.html
+++ b/module3_sol/index.html
@@ -29,10 +29,10 @@
         </div> <!--END OF NAVBAR-HEADER-->
         
         <div id="collapsable-nav" class ="collapse navbar-collapse">
-          <ul id="nav-list" class="nav navbar-nav navbar-right">
-            <li id="button-item" class="visible-xs text-center">Chicken</li>
-            <li id="button-item" class="visible-xs text-center">Beef</li>
-            <li id="button-item" class="visible-xs text-center">Sushi</li>
+          <ul id="nav-list" class="nav navbar-nav navbar-right text-center">
+            <li id="button-item" class="visible-xs">Chicken</li>
+            <li id="button-item" class="visible-xs">Beef</li>
+            <li id="button-item" class="visible-xs">Sushi</li>
           </ul>
         </div> <!--END OF BUTTON SETUP-->
       
